--- a/publication.html
+++ b/publication.html
@@ -59,7 +59,7 @@
 <ol>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>M. Le, <b>Q.-V. Pham</b>, N. Iradukunda, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -69,9 +69,9 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://arxiv.org/abs/2202.11508">AI-empowered Joint Communication and Radar Systems with Adaptive Waveform for Autonomous Vehicles</a>,&rdquo; under review, <i>IEEE Transactions on Communications</i>.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing Hybrid Long- and Short-Packet Based NOMA Systems via Joint Power Allocation and Beamforming Design</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing Hybrid Long- and Short-Packet Based NOMA Systems via Joint Power Allocation and Beamforming Design</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under review, <i>ACM Computing Surveys</i>.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under revision, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
 <li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
