--- a/activity.html
+++ b/activity.html
@@ -13,16 +13,16 @@
 <td id="layout-menu">
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
+<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
-<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -51,11 +51,11 @@
 </ul>
 <p></div></p>
 <p><div id="Technical Program Committee"></p>
-<h2>Technical Program Committee</h2>
+<h2>TPC / Invited Reviewers</h2>
 <ul>
-<li><p>2023: IEEE ICC</p>
+<li><p>2023: IEEE ICC, IEEE WCNC</p>
 </li>
-<li><p>2022: IEEE ICC, IEEE VTC2022-Spring</p>
+<li><p>2022: IEEE ICC, IEEE VTC2022-Spring, IEEE PIMRC</p>
 </li>
 <li><p>2021: IEEE Globecom, IEEE VTC2021-Fall, IEEE ISC2, EAI Qshine 2021, 4th ICCAIS, IEEE ICC</p>
 </li>
@@ -139,7 +139,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-04 12:02:50 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-30 14:59:30 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
