--- a/eduwork.html
+++ b/eduwork.html
@@ -15,14 +15,14 @@
 <div class="menu-item"><a href="index.html">Home</a></div>
 <div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
+<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
-<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -44,6 +44,8 @@
 <p><div id="Academic Experience"></p>
 <h2>Academic Experience</h2>
 <ul>
+<li><p>Sep. 2022 - Present: Assistant Professor, VinUniversity, Vietnam</p>
+</li>
 <li><p>Jan. 2020 - Present: Research Professor, Pusan National University, South Korea</p>
 </li>
 <li><p>Mar. 2018 - Dec. 2019: Research Professor, ICT Convergence Center, Changwon National University / Inje University, South Korea</p>
@@ -66,7 +68,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-29 11:27:30 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-30 14:19:33 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
