--- a/publication.html
+++ b/publication.html
@@ -13,16 +13,16 @@
 <td id="layout-menu">
 <div class="menu-category">Home</div>
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="eduwork.html" class="current">Education&nbsp;and&nbsp;Work</a></div>
+<div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="publication.html" class="current">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
+<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
-<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -30,8 +30,7 @@
 </div>
 <p><b>Copyright</b>: Materials presented here are to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's copyright. In most cases, these works may not be reposted without the explicit permission of the copyright holder.</p>
 <p><b>IEEE Copyright Notice</b>: © 2007-2013 IEEE. Personal use of this material is permitted. Permission from IEEE must be obtained for all other uses, in any current or future media, including reprinting/republishing this material for advertising or promotional purposes, creating new collective works, for resale or redistribution to servers or lists, or reuse of any copyrighted component of this work in other works.</p>
-<p><b>Reproducible Code</b>: All rights belong to Quoc-Viet Pham (email: vietpq90@gmail.com). The provided simulation code can be freely modified and distributed with the original copyright notice. Using the code with your own risk.</p>
-<p>Most updated sources for my publication: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;alert_preview_top_rm=2&amp;sortby=pubdate">Google Scholar</a> and <a href="https://www.researchgate.net/profile/Quoc-Viet-Pham">ResearchGate</a>.</p>
+<p><b>Reproducible Code</b>: The provided simulation code can be freely modified and distributed with the original copyright notice. Using the code with your own risk.</p>
 <p><div id="Books"></p>
 <h2>Books</h2>
 <ol>
@@ -59,9 +58,9 @@
 <ol>
 <li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under revision, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>M. Le, <b>Q.-V. Pham</b>, N. Iradukunda, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
+<li><p>M. Le, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled UAV Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
 <li><p>Q. V. Do, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="">QoE-Driven Task Association and Resource Allocation in Aerial-Access Edge Computing Using Deep Reinforcement Learning</a>,&rdquo; under revision, <i>IEEE Transactions on Communications</i>.</p>
 </li>
@@ -73,13 +72,13 @@
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, X.-Q. Pham, T. T. Nguyen, Z. Han, and D.-S. Kim, &ldquo;<a href="https://arxiv.org/abs/2202.10336">Artificial Intelligence for the Metaverse: A Survey</a>,&rdquo; under revision, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
-<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under review, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
+<li><p>T. R. Gadekallu, T. Huynh-The, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2203.09738">Blockchain for the Metaverse: A Review</a>,&rdquo; under review, <i>Future Generation Computer Systems</i>.</p>
+</li>
+<li><p>T.-H. Vu, T.-V. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Short-Packet Communications in UAV-Based NOMA Systems under Imperfect CSI and SIC</a>,&rdquo; under revision, <i>IEEE Transactions on Cognitive Communications and Networking</i>.</p>
 </li>
 <li><p>T. Huynh-The, T.-V. Nguyen, <b>Q.-V. Pham</b>, V.-S. Doan, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">Efficient Convolutional Networks for Robust Automatic Modulation Classification in OFDM-Based Wireless Systems</a>,&rdquo; under revision, <i>IEEE Systems Journals</i>. [<a href="https://github.com/vannguyentoan/OFDM_Modulation_Classification">MATLAB Code</a>]</p>
 </li>
-<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under revision, <i>ACM Computing Surveys</i>.</p>
-</li>
-<li><p>B. Prabadevi, <b>Q.-V. Pham</b>, M. Liyanage, N. Deepa, Mounik VVSS, S. Reddy, P. K. R. Maddikunta, N. Khare, T. R. Gadekallu, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2101.08013">Deep Learning for Intelligent Demand Response and Smart Grids: A Comprehensive Survey</a>,&rdquo; under review, <i>Computer Science Review</i>.</p>
+<li><p>T. R. Gadekallu, <b>Q.-V. Pham</b>, T. Huynh-The, S. Bhattacharya, P. K. R. Maddikunta, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2110.04160">Federated Learning for Big Data: A Survey on Opportunities, Applications, and Future Directions</a>,&rdquo; under review, <i>Engineering Applications of Artificial Intelligence</i>.</p>
 </li>
 <li><p>M. Alazab, R. Vinayakumar, S. Srinivasan, <b>Q.-V. Pham</b>, S. Venkatraman, Soman KP, and K. Simran, &ldquo;<a href="https://www.techrxiv.org/articles/preprint/Deep_Learning_for_Cyber_Security_Applications_A_Comprehensive_Survey/16748161/1">Deep Learning for Cyber Security Applications: A Comprehensive Survey</a>,&rdquo; under revision, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
@@ -88,9 +87,7 @@
 <p><div id="2022 and In Press"></p>
 <h2>2022 and In Press</h2>
 <ol>
-<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, in press.</p>
-</li>
-<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; <i>IEEE Open Journal of the Communications Society</i>, in press. </p>
+<li><p>H. Dang-Ngoc, D. N. Nguyen, K. Ho-Van, H. T. Dinh, E. Dutkiewicz, <b>Q.-V. Pham</b>, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9854848">Secure Swarm UAV-assisted Communications with Cooperative Friendly Jamming</a>,&rdquo; under revision, <i>IEEE Internet of Things Journal</i>, in press.</p>
 </li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large-Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, in press. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
@@ -102,9 +99,11 @@
 </li>
 <li><p>A. S. Sadiq, A. A. Dehkordi, S. Mirjalili, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417422007400">Nonlinear Marine Predator Algorithm: A Cost-effective Optimizer for Fair Power Allocation in NOMA-VLC-B5G Network</a>,&rdquo; <i>Expert Systems with Applications</i>, vol. 203, pp. 117395, Oct. 2022. [<a href="https://www.mathworks.com/matlabcentral/fileexchange/111135-nonlinear-marine-predator-algorithm-nmpa">MATLAB Code</a>]</p>
 </li>
-<li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9714464">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo;  <i>IEEE Transactions on Green Communications and Networking</i>, vol. 6, no. 3, pp. 1316-1329, Sep. 2022.</p>  
+<li><p>J. Jiang, F. Liu, W. W. Y. Ng, Q. Tang, W. Wang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://ieeexplore.ieee.org/document/9714464">Dynamic Incremental Ensemble Fuzzy Classifier for Data Streams in Green Internet of Things</a>,&rdquo; <i>IEEE Transactions on Green Communications and Networking</i>, vol. 6, no. 3, pp. 1316-1329, Sep. 2022.</p>
 </li>
 <li><p>C. T. Nguyen, N. V. Huynh, N. H. Chu, Y. M. Saputra, H. T. Dinh, D. N. Nguyen, <b>Q.-V. Pham</b>, D. Niyato, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9789336">Transfer Learning for Wireless Networks: A Comprehensive Survey</a>,&rdquo; <i>Proceedings of the IEEE</i>, vol. 110, no. 8, pp. 1073-1115, Aug. 2022.</p>
+</li>
+<li><p>G. Gür, A. Kalla, C. de Alwis, <b>Q.-V. Pham</b>, K.-H. Ngo, M. Liyanage, and P. Porambage, &ldquo;<a href="https://ieeexplore.ieee.org/document/9845700">Integration of ICN and MEC in 5G and Beyond Networks: Mutual Benefits, Use Cases, Challenges, Standardization, and Future Research</a>,&rdquo; IEEE Open Journal of the Communications Society, vol. 3, pp. 1382-1412, Aug. 2022.</p>
 </li>
 <li><p>M. Parimala, R. M. Swarna Priya, <b>Q.-V. Pham</b>, K. Dev, S. Pandya, P. K. R. Maddikunta, T. R. Gadekallu, and T. Huynh-The, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128622001955">Fusion of Federated Learning and Industrial Internet of Things: A Survey</a>,&rdquo; <i>Computer Networks</i>, vol. 212, pp. 109048, Jul. 2022.</p>
 </li>
@@ -120,9 +119,9 @@
 </li>
 <li><p>N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, S. Bhattacharya, B. Prabadevi, T. R. Gadekallu, P. K. R. Maddikunta, F. Fang, and P. N. Pathirana, &ldquo;<a href="https://authors.elsevier.com/sd/article/S0167-739X(22)00024-3">A Survey on Blockchain for Big Data: Approaches, Opportunities, and Future Directions</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 131, pp. 209-226, Jun. 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 159-166, May/Jun. 2022.</p>  
+<li><p><b>Q.-V. Pham</b>, M. Zeng, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="">Aerial Access Networks for Federated Learning: Applications and Challenges</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 159-166, May/Jun. 2022.</p>
 </li>
-<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829312">IIFNet: A Fusion based Intelligent Service for Noisy Preamble Detection in 6G</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 48-54, May/Jun. 2022.</p>  
+<li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829312">IIFNet: A Fusion based Intelligent Service for Noisy Preamble Detection in 6G</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 48-54, May/Jun. 2022.</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
 </li>
@@ -272,7 +271,7 @@
 </li>
 <li><p>S.-M. Lee, <b>Q.-V. Pham</b>, M.-D. Nguyen, and W.-J. Hwang, &ldquo;<a href="">Model Parameter Compression Scheme using Dimension Reduction in Federated Learning</a>,&rdquo; in <i>International Conference on Multimedia Information Technology and Applications (MITA)</i>, Jeju Island, Korea, Jul. 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9838414">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.  </p>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/9838414">UAV-enabled Wireless Powered Communication for Energy-Efficient Federated Learning</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.  </p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="">RaComNet: High-Performance Deep Network for Waveform Recognition in Coexistence Radar-Communication Systems</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Seoul, Korea, May 2022.</p>
 </li>
@@ -328,7 +327,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-02 15:46:39 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-30 14:57:23 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
