--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
-<div class="menu-item"><a href="publication.html">Publication</a></div>
+<div class="menu-item"><a href="publication.html">Publications</a></div>
 <div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
-<div class="menu-item"><a href="supervision.html">Supervision&nbsp;and&nbsp;Teaching</a></div>
+<div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
+<div class="menu-item"><a href="teaching.html">Teaching</a></div>
 <div class="menu-category">Miscellany</div>
-<div class="menu-item"><a href="coursework.html">Courseworks	and&nbsp;Ebooks</a></div>
+<div class="menu-item"><a href="ebook.html">Ebooks</a></div>
 <div class="menu-item"><a href="dataset.html">Datasets</a></div>
-<div class="menu-item"><a href="http://jemdoc.jaboc.net/">Jemdoc</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -32,7 +32,7 @@
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="210px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:vietpq@pusan.ac.kr">Quoc-Viet PHAM</a> <br />
 Research Professor, Ph.D. <br /> 
-<a href="http://www.pusan.ac.kr/eng/">Pusan National University</a> </p>
+<a href="www.pusan.ac.kr/eng">Pusan National University</a></p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
 <ul>
@@ -66,7 +66,7 @@ Research Professor, Ph.D. <br />
 <ul>
 <li><p>I am chairing <a href="https://atc-conf.org/special-sessions/special-session-on-machine-learning-for-future-networks-and-iot-systems">a special session on machine learning for future networks and IoT systems</a> at <a href="https://atc-conf.org/">IEEE ATC 2022</a>. Consider submitting your high-quality papers and visit Hanoi.  </p>
 </li>
-<li><p>[05/2022] Excellent news! <a href="https://arxiv.org/abs/2102.07572">Our comprehensive survey on transfer learning for wireless networks</a> is accepted to Proceedings of the IEEE.</p>
+<li><p>[05/2022] Excellent news! <a href="https://ieeexplore.ieee.org/document/9789336">Our comprehensive survey on transfer learning for wireless networks</a> is accepted to Proceedings of the IEEE.</p>
 </li>
 <li><p>[03/2022] My work on <a href="https://ieeexplore.ieee.org/document/9738797">aerial computing - a key enabler of 6G comprehensive computing infrastructure</a> is accepted to IEEE Internet of Things Journal. </p>
 </li>
@@ -99,7 +99,9 @@ Research Professor, Ph.D. <br />
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html"><font color=red size=+0.5><b>(Full Publication)</b></font></a></h2>
 <ol>
-<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2106.09261">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
+<li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
+</li>
+<li><p>M.-D. Nguyen, S.-M. Lee, Q.-V. Pham, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2204.06760">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2022.</p>
 </li>
 <li><p>Q.-V. Pham, R. Ruby, F. Fang, D. C. Nguyen, Z. Yang, M. Le, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9738797">Aerial Computing: A New Computing Paradigm, Applications, and Challenges</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 9, no. 11, pp. 8339-8363, Jun. 2022.</p>
 </li>
@@ -121,8 +123,6 @@ Research Professor, Ph.D. <br />
 </li>
 <li><p>Q.-V. Pham, F. Fang, V. N. Ha, M. J. Piran, M. Le, L. B. Le, W.-J. Hwang, and Z. Ding, &ldquo;<a href="https://ieeexplore.ieee.org/document/9113305">A Survey of Multi-Access Edge Computing in 5G and Beyond: Fundamentals, Technology Integration, and State-of-the-Art</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 116974-117017, Jun. 2020.</p>
 </li>
-<li><p>Q.-V. Pham, S. Mirjalili, N. Kumar, M. Alazab, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8993843">Whale Optimization Algorithm with Applications to Resource Allocation in Wireless Networks</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 4, pp. 4285-4297, Apr. 2020.</p>
-</li>
 <li><p>T. Huynh-The, C.-H. Hua, Q.-V. Pham, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/8963964">MCNet: An Efficient CNN Architecture for Robust Automatic Modulation Classification</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 24, no. 4, pp. 811-815, Apr. 2020.</p>
 </li>
 <li><p>Q.-V. Pham, Hoang T. Nguyen, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/8917566">Coalitional Games for Computation Offloading in NOMA-Enabled Multi-Access Edge Computing</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 69, no. 2, pp. 1982-1993, Feb. 2020.</p>
@@ -131,11 +131,11 @@ Research Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me <a href="Misc\Curriculum_Vitae_PHAM.pdf"><font color=red size=+0.5><b>(Curriculum Vitae</a> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a>)<b></font></b></font></h2>
-<p>Quoc-Viet Pham (M&rsquo;18) received the B.S. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Gimhae, Republic of Korea, in 2017. He has been a Research Professor with Pusan National University, Republic of Korea, since Jan. 2020.</p>
-<p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award 2021 from the Ministry of Science and Technology (Vietnam). He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and a lead guest editor of the IEEE Internet of Things Journal.</p>
+<p>Quoc-Viet Pham (M’18) received the B.S. degree in electronics and telecommunications engineering from the Hanoi University of Science and Technology, Vietnam, in 2013, and the Ph.D. degree in telecommunications engineering from Inje University, Gimhae, Republic of Korea, in 2017. He has been a Research Professor with Pusan National University, Republic of Korea, since Jan. 2020.</p>
+<p>He is specialized in applying convex optimization, game theory, and machine learning to analyze and optimize edge computing and future wireless communications. He has been granted the Korea NRF Funding for outstanding young researchers for the term 2019–2024. He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and the Golden Globe Award from the Ministry of Science and Technology (Vietnam) in 2021. He is also an editor of Journal of Network and Computer Applications (Elsevier), Scientific Reports (Nature), and Frontiers in Communications and Networks, and was a lead guest editor of the IEEE Internet of Things Journal.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-30 10:31:32 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-30 15:04:51 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
