--- a/activity.html
+++ b/activity.html
@@ -16,7 +16,7 @@
 <div class="menu-item"><a href="eduwork.html">Education&nbsp;and&nbsp;Work</a></div>
 <div class="menu-category">Research</div>
 <div class="menu-item"><a href="publication.html">Publications</a></div>
-<div class="menu-item"><a href="activity.html">Professional&nbsp;Activities</a></div>
+<div class="menu-item"><a href="activity.html" class="current">Professional&nbsp;Activities</a></div>
 <div class="menu-item"><a href="grantaward.html">Grants&nbsp;and&nbsp;Awards</a></div>
 <div class="menu-item"><a href="team.html">Research&nbsp;Team</a></div>
 <div class="menu-item"><a href="teaching.html">Teaching</a></div>
@@ -139,7 +139,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-30 14:59:30 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-30 15:15:26 Korea Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
